working on making the proper scripts